--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" href="https://raw.githubusercontent.com/TempestAethel/AuroraChronicles/refs/heads/main/Favicon.png" type="image/png">
 <title>AuroraChronicles</title>
 <link rel="icon" href="favicon.png" type="image/png" />
 <style>
+  
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
   /* Reset & base */
